# Sexism-detection

./: .gitignore  .gitmodules  Assignment_2_refactoring.ipynb  NNmodules.py  README.md  assignement_2.ipynb  assignment_1.ipynb  assignment_1_MD.ipynb  assignment_1_tmp.ipynb  assignment_2 copy.ipynb  assignment_2.ipynb  assignment_2_LUCAT_MODIFIED.ipynb  assignment_2_graph_fixed.ipynb  assignment_2_l.ipynb  assignment_2_lucab.ipynb  detector.py  model_metrics.csv  models_predictions.csv  nlp_assignement2_refactoring.ipynb  pyproject.toml  requirements.txt  requirements_manual.txt  roberta.py  to_be_deleted.ipynb
csv/: 2_layers_1337_history.csv  2_layers_42_history.csv  2_layers_69_history.csv  baseline_1337_history.csv  baseline_42_history.csv  baseline_69_history.csv  model_metrics.csv  models_predictions.csv  test_predictions.csv
data/: vocab.json
drawio/: LSTM_arch.drawio  pipeline.drawio
lab/tutorial-1/: tutorial1-2324.ipynb
lab/tutorial-2/: tutorial2-2425.ipynb
utils/: p_value.py
