[project]
name = "sexism-detection"
version = "0.1.0"
description = "A sexism detection model using recurrent neural architectures and transformers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.3",
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "tqdm>=4.66.6",
    "umap>=0.1.1",
    "umap-learn>=0.5.7",
    "ipywidgets>=8.1.5",
    "sympy>=1.13.3",
    "transformers==4.45.2",
    "sentence-transformers==3.1.1",
    "datasets>=3.1.0",
    "evaluate>=0.4.3",
]
